# css-variables-zed

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile.test  Dockerfile.zed-headless  LICENSE  PUBLISHING.md  README.md  docker-test-full.sh  docker-test.sh  extension.toml  extension.wasm  package-lock.json  package.json  test_clean_install.sh  test_extension.sh  zed-extension-release.skill
.beads/: issues.jsonl
.github/workflows/: release.yml  test.yml
.zed/: settings.json
example/: index.astro  index.html  index.ripple  index.svelte  index.vue
examples/: README.md  app.js  index.html  main.scss  vars.scss
skills/zed-extension-release/: SKILL.md
skills/zed-extension-release/scripts/: zed_extension_release.py
src/: lib.rs
src/scripts/: pre-push.sh
