[package]
name = "zed-css-variables"
version = "0.0.9"
edition = "2021"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
zed_extension_api = "0.7"
serde_json = "1.0"
flate2 = "1.1.8"
tar = "0.4.44"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
